--- a/latex/recipe-034.tex
+++ b/latex/recipe-034.tex
@@ -33,7 +33,7 @@
 
 \ingredient{冬干苕菜}{二两}
 \ingredient{肥瘦肉}{各半斤}
-\ingredient{慈菇}{三两}
+\ingredient{慈姑}{三两}
 \ingredient{金钩}{五钱}
 \ingredient{肥火腿}{一两}
 \ingredient{鲜青豆}{二两}
@@ -50,7 +50,7 @@
 
 \preparation
 
-\step 金钩用清水发胀，慈菇去皮，肥痩肉、火腿、鲜青豆等分别切成碎颗，鸡蛋清与豆
+\step 金钩用清水发胀，慈姑去皮，肥痩肉、火腿、鲜青豆等分别切成碎颗，鸡蛋清与豆
 粉调成蛋清豆粉，同时盛入碗内，再放入盐、料酒、胡椒、味精等，用手拌匀，按四分之
 一捏成四个扁形的丸子，放入锅内（锅内有猪油），炸进皮时，不见黄色即捞起。
 
