--- a/latex/recipe-042.tex
+++ b/latex/recipe-042.tex
@@ -33,7 +33,7 @@
 
 \ingredient{猪肚头（扯净）}{八两}
 \ingredient{兰花}{二十件}
-\ingredient{慈菇}{六个}
+\ingredient{慈姑}{六个}
 \ingredient{化猪油}{六两耗三两}
 \ingredient{水豆粉}{二钱}
 \ingredient{香油}{二分}
@@ -48,12 +48,12 @@
 \step 用刀先将肚头的油筋剽干净，平刀起成两层，斜刀𠟤成花子，再切成二粗丝，用水
 豆粉加盐、胡椒面、料酒码匀。
 
-\step 慈菇削皮，切成二粗丝；兰草花抽心，去茎，淘洗干净。分别漂入清水内。
+\step 慈姑削皮，切成二粗丝；兰草花抽心，去茎，淘洗干净。分别漂入清水内。
 
 \step 清汤、水豆粉，加其余的盐、料酒、味精，兑成滋汁。
 
 \step 旺火。先将锅内猪油烧至五成热时，即将肚丝放下，急速滑散，拨在一边，下兰花、
-慈菇，稍造一下再合匀，烹下滋汁，将锅簸匀，淋香油起锅即成。
+慈姑，稍造一下再合匀，烹下滋汁，将锅簸匀，淋香油起锅即成。
 
 \features
 
