--- a/latex/recipe-089.tex
+++ b/latex/recipe-089.tex
@@ -36,7 +36,7 @@
 \ingredient{肥瘦肉}{二两五}
 \ingredient{鸡蛋清}{三个}
 \ingredient{干豆粉}{一两}
-\ingredient{慈菇}{五个}
+\ingredient{慈姑}{五个}
 \ingredient{熟火腿}{五钱}
 \ingredient{水发香菌}{五钱}
 \ingredient{生菜}{三两}
@@ -48,8 +48,8 @@
 
 \preparation
 
-\step 慈菇削皮，调蛋清豆粉；网油洗净，去厚油边、去梗鸡脯去膜和油筋，切成细丝；
-肥瘦肉、火腿、香菌、慈菇均分别切细丝，加盐、味精、胡椒、料酒共同拌匀。
+\step 慈姑削皮，调蛋清豆粉；网油洗净，去厚油边、去梗鸡脯去膜和油筋，切成细丝；
+肥瘦肉、火腿、香菌、慈姑均分别切细丝，加盐、味精、胡椒、料酒共同拌匀。
 
 \step 网油平铺案上，先抹上蛋清豆粉，再把拌好味的各种丝子用网油裹起，裹成、三分
 厚、一寸五宽的卷约四至六条，用刀尖放气。
