--- a/latex/recipe-097.tex
+++ b/latex/recipe-097.tex
@@ -35,7 +35,7 @@
 \ingredient{鸡蛋清}{二个}
 \ingredient{干豆粉}{一两}
 \ingredient{猪肥膘}{二两}
-\ingredient{慈菇}{五个}
+\ingredient{慈姑}{五个}
 \ingredient{鸡汤}{一两五}
 \ingredient{生菜（净）}{四两}
 \ingredient{猪油}{一斤耗一两}
@@ -49,7 +49,7 @@
 \preparation
 
 \step 鸡脯、肥膘分别砸至极茸。加蛋清、水豆粉、盐、鸡汤和匀，调成“鸡糁”。加味
-精、料酒、胡椒及铡碎的慈菇拌匀，盛入盘内上笼蒸五分钟，刚熟取出晾冷成鸡糕。
+精、料酒、胡椒及铡碎的慈姑拌匀，盛入盘内上笼蒸五分钟，刚熟取出晾冷成鸡糕。
 
 \step 鸡糕用刀切成一寸二长、三分宽厚的一字条；干豆粉“过箩”，使鸡糕裹上一层细干
 豆粉待用。
