--- a/latex/recipe-127.tex
+++ b/latex/recipe-127.tex
@@ -38,7 +38,7 @@
 \ingredient{白糖}{三钱}
 \ingredient{味精}{二分}
 \ingredient{化猪油}{一斤耗三两}
-\ingredient{慈菇}{一两}
+\ingredient{慈姑}{一两}
 \ingredient{盐}{二分}
 \ingredient{酱油}{四钱}
 \ingredient{胡椒面}{一分}
@@ -49,12 +49,12 @@
 \preparation
 
 \step 鱼肉洗净，用刀片成一寸五长、八分宽、半分厚的片，用清水漂后捞起，滤干水气，
-先用盐、胡椒面料酒造匀，再加鸡蛋清豆粉；兰花抽心，去茎；慈菇削皮切成薄片。
+先用盐、胡椒面料酒造匀，再加鸡蛋清豆粉；兰花抽心，去茎；慈姑削皮切成薄片。
 
 \step 料酒、白糖、味精、盐、酱油、醋、清汤加水豆粉少许兑成滋汁。
 
 \step 锅在旺火上烧红，下猪油，烧至五成热，即将鱼片倒下，用筷子轻轻滑散，滗去余
-油，即将兰花、慈菇片投入造匀，立即烹下滋汁，起锅即成。
+油，即将兰花、慈姑片投入造匀，立即烹下滋汁，起锅即成。
 
 \features
 
