--- a/latex/recipe-154.tex
+++ b/latex/recipe-154.tex
@@ -39,23 +39,23 @@
 \ingredient{化猪油}{三两耗二两}
 \ingredient{干豆粉}{五钱}
 \ingredient{胡椒面}{一分}
-\ingredient{慈菇}{二两}
+\ingredient{慈姑}{二两}
 \ingredient{盐}{五分}
 
 \preparation
 
-\step 慈菇削皮，淘洗干净，与火腿分别切成碎丁。料酒、胡椒面、味精、盐、水豆粉少
+\step 慈姑削皮，淘洗干净，与火腿分别切成碎丁。料酒、胡椒面、味精、盐、水豆粉少
 许加鸡汤兑成滋汁。
 
 \step 鲜虾用手挤仁去壳，漂于清水中，淘去杂质；然后将水气滤干，加上蛋清豆粉、盐
 少许拌匀。
 
 \step 炒锅在旺火上烧红，先舀油浪匀滗去，另舀新油，烧至五成火候，即倒下虾仁，先
-用筷子滑散，多余的油滗去，即下慈菇、火腿丁炒转，再下滋汁，炒几转即起锅。
+用筷子滑散，多余的油滗去，即下慈姑、火腿丁炒转，再下滋汁，炒几转即起锅。
 
 \features
 
-鲜嫩可口，富于营养。按以上作法，将慈菇、火腿配料改成鲜豌豆米即为“翡翠虾仁”。
+鲜嫩可口，富于营养。按以上作法，将慈姑、火腿配料改成鲜豌豆米即为“翡翠虾仁”。
 
 \end{recipe}
 
