--- a/latex/recipe-160.tex
+++ b/latex/recipe-160.tex
@@ -37,7 +37,7 @@
 \ingredient{肥瘦熟火腿}{一两}
 \ingredient{白糖}{六分}
 \ingredient{化猪油}{二斤耗二两五}
-\ingredient{慈菇}{四个}
+\ingredient{慈姑}{四个}
 \ingredient{熟猪肥膘肉}{四两}
 \ingredient{莲花白}{四两}
 \ingredient{胡椒面}{一分}
@@ -52,7 +52,7 @@
 
 \preparation
 
-\step 鲜虾去壳，挤出虾仁。嫩豌豆去皮。慈菇洗净去皮。猪肥膘肉、火腿去皮，都切成
+\step 鲜虾去壳，挤出虾仁。嫩豌豆去皮。慈姑洗净去皮。猪肥膘肉、火腿去皮，都切成
 一分方丁莲花白去筋去茎，切成一分宽的细丝，漂在清水中待用。豆油皮切成三寸见方的
 片。
 
