--- a/latex/recipe-163.tex
+++ b/latex/recipe-163.tex
@@ -35,7 +35,7 @@
 \ingredient{熟瘦火腿}{一两}
 \ingredient{金钩}{三钱}
 \ingredient{水发木耳}{一两}
-\ingredient{慈菇}{一两}
+\ingredient{慈姑}{一两}
 \ingredient{鲜青豆}{二两}
 \ingredient{鸡蛋}{二个}
 \ingredient{猪肥膘肉}{二两五}
@@ -52,7 +52,7 @@
 \step 先将虾仁淘洗干净，放于墩子上，用刀背捶成细茸，放于碗内。将猪肥膘肉剁成细
 茸（如油脂），放于另一个碗内。再将猪瘦肉捶茸装入另碗用清水调散待用。
 
-\step 将火腿、金钩、木耳（淘净后挤干水份）、慈菇（去皮剁细后用帕子挤干）、青
+\step 将火腿、金钩、木耳（淘净后挤干水份）、慈姑（去皮剁细后用帕子挤干）、青
 豆（用沸水泹后用清水冰冷，剁细后挤干。无青豆时可用其他代用，但要青色），分别剁
 成细末，分开放入盘内。
 
