--- a/latex/recipe-202.tex
+++ b/latex/recipe-202.tex
@@ -35,7 +35,7 @@
 \ingredient{猪板油}{三两五}
 \ingredient{鸡蛋}{二个}
 \ingredient{红苕}{三两}
-\ingredient{慈菇}{二两}
+\ingredient{慈姑}{二两}
 \ingredient{网油}{二两}
 \ingredient{瓜片}{五钱}
 \ingredient{核桃米}{一两}
@@ -47,14 +47,14 @@
 \step 用铁丝漏瓢将枣子盛着，置旺火上把枣皮烧焦，边烧边簸动，烧至每个枣子都起黑
 壳时，倒入冷水中泡约五分钟，捞起将黑壳去掉，并去掉枣核。
 
-\step 核桃米入沸水中泡约二分钟，捞起去皮，入油锅中炸呈黄色捞起；慈菇削皮洗净；
+\step 核桃米入沸水中泡约二分钟，捞起去皮，入油锅中炸呈黄色捞起；慈姑削皮洗净；
 红苕煮熟去净皮。
 
-\step 猪板油去皮去筋，与剥出的枣肉分别用刀宰茸成泥；熟红苕研茸；核桃米、慈菇、
+\step 猪板油去皮去筋，与剥出的枣肉分别用刀宰茸成泥；熟红苕研茸；核桃米、慈姑、
 瓜片各切成细丁。
 
 \step 宰出的枣泥、板油连同红苕泥用盆子盛着，加鸡蛋入内，用手搅匀后放入核桃米、
-瓜片、慈菇、白糖、玫瑰等，再继续搅为混合泥。
+瓜片、慈姑、白糖、玫瑰等，再继续搅为混合泥。
 
 \step 网油铺于蒸碗中垫底，油边吊在碗口外，用手理伸，把拌好的混和泥放入网油上
 面，用手抹平整，再将吊在碗边的网油搭转来盖着，碗口用浸湿的厚纸封密，上笼用旺火
