--- a/latex/recipe-240.tex
+++ b/latex/recipe-240.tex
@@ -33,7 +33,7 @@
 
 \ingredient{鸡蛋}{四个}
 \ingredient{猪肥瘦肉}{六两}
-\ingredient{大慈菇}{十个}
+\ingredient{大慈姑}{十个}
 \ingredient{金钩}{五钱}
 \ingredient{白菜秧心子}{六两}
 \ingredient{味精}{二分}
@@ -49,11 +49,11 @@
 
 \preparation
 
-\step 猪肥瘦肉洗净，宰成肉茸；慈菇洗净，削皮，在沸水内冒一下，用刀切成碎米颗；
+\step 猪肥瘦肉洗净，宰成肉茸；慈姑洗净，削皮，在沸水内冒一下，用刀切成碎米颗；
 金钩用温热水淘洗干净，在沸水内泡半小时，捞起切成碎米颗；鸡蛋打破在碗内调散，以
 一半在锅内摊成一张大蛋皮，其余一半留碗内待用。
 
-\step 肉茸合慈菇、金钩颗装在大碗内，加剩余调散的鸡蛋三分之一，同时加进豆粉（二
+\step 肉茸合慈姑、金钩颗装在大碗内，加剩余调散的鸡蛋三分之一，同时加进豆粉（二
 钱）、料酒（二钱）、盐（一分）、味精少许、胡椒面少许拌匀；把蛋皮铺在墩子上，将
 拌好的肉茸搛一半均匀地抹在蛋皮上，两手从左右两边向中心卷成“如意”形；上笼蒸约
 两分钟，取出晾冷后，切成二分厚的片子待用。
