--- a/latex/recipe-250.tex
+++ b/latex/recipe-250.tex
@@ -52,7 +52,7 @@
 
 \step 猪尾拈净残毛，刮洗干净，去掉过细过粗的两头，只留中间粗细均匀的一段，微煮
 后凉冷，宰成一寸五长的节子。将蹄筋洗干净后用纱布包起，放入汤锅内煮至七成火（倒
-𤆵不𤆵的程度）捞起。青笋削皮，削成六分大的慈菇形，再倒入猪油锅内跑一次，将水气
+𤆵不𤆵的程度）捞起。青笋削皮，削成六分大的慈姑形，再倒入猪油锅内跑一次，将水气
 炸干，捞起入碗待用。
 
 \step 冰糖炒成糖汁，姜、葱、花椒用白油炒出香味后捞起，包入一个纱布内，再放入罐
@@ -62,7 +62,7 @@
 
 \step 鸽蛋用清水煮好，去壳，在油锅内跑一次。再将猪尾、蹄筋捞起定碗，定碗的形式
 是先用鸽蛋三个在碗底中心，摆成三方形，每一个空间相一节猪尾，周围再围一转蹄筋，
-外面围猪尾，猪尾外又是鸽蛋，其余的作为底子，底内再放入慈菇形的青笋，青笋上面放
+外面围猪尾，猪尾外又是鸽蛋，其余的作为底子，底内再放入慈姑形的青笋，青笋上面放
 一两生鸡油，再掺入二两包罐内的原汁上笼蒸，蒸至青笋已𤆵即取出，翻入大圆盘内，再
 将罐内的原汁滤过收成浓汁淋于盘内即成。
 
