--- a/latex/recipe-033.tex
+++ b/latex/recipe-033.tex
@@ -36,7 +36,7 @@
 \ingredient{水发兰片}{一两}
 \ingredient{水发香菌}{一两}
 \ingredient{鸡蛋}{二个}
-\ingredient{慈菇}{六个}
+\ingredient{慈姑}{六个}
 \ingredient{菜心}{五两}
 \ingredient{菜油}{一斤}
 \ingredient{酱油}{五钱}
@@ -50,9 +50,9 @@
 
 \preparation
 
-\step 菜心淘净，泹好；慈菇削皮；香菌洗净泥沙。
+\step 菜心淘净，泹好；慈姑削皮；香菌洗净泥沙。
 
-\step 猪肉切成小豌豆大的丁，火腿、兰片、香菌、慈菇，分别切成细丁；葱切细花；姜
+\step 猪肉切成小豌豆大的丁，火腿、兰片、香菌、慈姑，分别切成细丁；葱切细花；姜
 去皮切细末。以上各材料加盐、酱油、水豆粉、鸡蛋（连黄）搅匀，共作成四个肉丸子，
 略按扁。
 
