--- a/latex/recipe-237.tex
+++ b/latex/recipe-237.tex
@@ -33,7 +33,7 @@
 
 \ingredient{田鸡腿}{十六对}
 \ingredient{兰花}{二十件}
-\ingredient{慈菇}{一两}
+\ingredient{慈姑}{一两}
 \ingredient{料酒}{五钱}
 \ingredient{鸡蛋清}{一个}
 \ingredient{清汤}{一两}
@@ -47,11 +47,11 @@
 
 \step 用刀尖先将田鸡腿去骨，洗净后，用料酒、盐拌和均匀后，加鸡蛋清豆粉拌匀。
 
-\step 慈菇削皮，淘净，切成头粗丝。鱼辣椒去籽，切成马耳朵。兰花抽心，去茎，用清
+\step 慈姑削皮，淘净，切成头粗丝。鱼辣椒去籽，切成马耳朵。兰花抽心，去茎，用清
 水漂起。将料酒、盐、味精，加清汤、水豆粉少许，兑成滋汁。
 
 \step 锅在旺火上先烧红，猪油倒入浪转滗去，再换油烧至八成火，即将田鸡倒下，炒
-散，再加慈菇、兰花、鱼辣椒，造匀，烹滋汁即成。
+散，再加慈姑、兰花、鱼辣椒，造匀，烹滋汁即成。
 
 \features
 
