--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -71,17 +71,17 @@
 
 \vspace{1\baselineskip}%
 
-二、七、八……全书各篇目，“滗”。《四》本《八》本作“泌”。径改。“滗”，滤。
+二、七、八……全书各篇，“滗”。《四》本《八》本作“泌”。径改。“滗”，滤。
 
-四、二四、七一……全书各篇目，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷
-子）夹。
+四、二四、七一……全书各篇，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷子）
+夹。
 
 六、锅巴肉片。《四》本《八》本标题作“锅粑肉片”。据《中》本改。
 
 七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
-八、一一、一六……全书各篇目，“𰪿糟”。“𰪿”系“𫃑”之类推简化字。据《现代汉语词
-典》，今作“醪糟”。
+八、一一、一六……全书各篇，“𰪿糟”。“𰪿”系“𫃑”之类推简化字。据《现代汉语词典》，
+今作“醪糟”。
 
 九、芙蓉肉片。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》
 本改。
@@ -97,8 +97,8 @@
 
 二二、三三，“肉丸”。《四》本《八》本作“肉元”。径改。
 
-二四、四八、五五……全书各篇目，“口蘑”。《四》本《八》本作“口茉”。据《中》本
-《重》本改。
+二四、四八、五五……全书各篇，“口蘑”。《四》本《八》本作“口茉”。据《中》本《重》
+本改。
 
 二八、二九、三三、一六三、二〇五、二〇六、二〇八、二五八、二七一，“圆”。《四》
 本《八》本作“元”。径改。
@@ -131,7 +131,7 @@
 
 四八、菠饺白肺。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
-五〇、七九、八五……全书各篇目，“蕃茄”。据《现代汉语词典》，今作“番茄”。
+五〇、七九、八五……全书各篇，“蕃茄”。据《现代汉语词典》，今作“番茄”。
 
 五二、六三、一四九、二五四，“劖”。《八》本作
 “{\bfseries\raise.19em\hbox{\scalebox{.675}[.75]{免}}\kern-.675em%
@@ -143,7 +143,7 @@
 
 五五、六九、一五三，“须”。《四》本作“鬚”。据《八》本改。
 
-五五、一八六、一八八……全书各篇目，“𧎼蛀”。今作“珧柱”。干贝。
+五五、一八六、一八八……全书各篇，“𧎼蛀”。今作“珧柱”。干贝。
 
 五六、烤酥方。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本皆
 作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
@@ -184,7 +184,7 @@
 
 一二〇、一二一、一二三、二二三、二五七、二六二，“𬂁”。“肫”之异体字。鸟类的胃。
 
-一二〇、一二九、一三〇……全书各篇目，“鳃”。各本作“腮”。径改。
+一二〇、一二九、一三〇……全书各篇，“鳃”。各本作“腮”。径改。
 
 一二一、汆双脆。《四》本《八》本标题作“川双脆”。径改。
 
