Add comment for BANZHI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -111,8 +111,8 @@
 
 三三、三四、一四七、一八八、一九一，“丸子”。《四》本《八》本作“元子”。径改。
 
-三七、炸斑指。“班指”，《四》本《八》本作“斑指”。据《中》本改。 “……至肥肠起着皱
-折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
+三七、炸斑指。“班指”，《四》本《八》本作“斑指”。今作“扳指”。据《中》本改。
+“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
 
