--- a/latex/recipe-018.tex
+++ b/latex/recipe-018.tex
@@ -35,7 +35,7 @@
 \ingredient{熟猪肚}{二两}
 \ingredient{熟猪舌}{一两五}
 \ingredient{熟火腿}{一两}
-\ingredient{尖刀丸子}{一两五}
+\ingredient{尖刀圆子}{一两五}
 \ingredient{水发响皮}{二两}
 \ingredient{水发笋子}{二两}
 \ingredient{水发鸡松}{一两}
@@ -48,13 +48,13 @@
 
 \preparation
 
-\step 炸酥、放响、汆笋子、抠鸡松、剁丸子馅。
+\step 炸酥、放响、汆笋子、抠鸡松、剁圆子馅。
 
 \step 酥肉、肚、舌、火腿、响皮、笋子、鸡松，分别切、片成一寸五长、三至四分宽条
-片，丸子刮成尖刀。
+片，圆子刮成尖刀。
 
 \step 碗底用火腿、肚、舌各一片摆好，两头各摆鸡松一片，碗周围按酥肉、火腿、肚、
-舌、鸡松各一片间隔镶满，再按先后放丸子、响皮、笋子分层垫底加姜葱、料酒上笼；芙
+舌、鸡松各一片间隔镶满，再按先后放圆子、响皮、笋子分层垫底加姜葱、料酒上笼；芙
 蓉蛋单蒸。走菜时吃味、灌汤，芙蓉蛋舀在周围。
 
 \features
