--- a/latex/recipe-034.tex
+++ b/latex/recipe-034.tex
@@ -52,11 +52,11 @@
 
 \step 金钩用清水发胀，慈姑去皮，肥痩肉、火腿、鲜青豆等分别切成碎颗，鸡蛋清与豆
 粉调成蛋清豆粉，同时盛入碗内，再放入盐、料酒、胡椒、味精等，用手拌匀，按四分之
-一捏成四个扁形的丸子，放入锅内（锅内有猪油），炸进皮时，不见黄色即捞起。
+一捏成四个扁形的圆子，放入锅内（锅内有猪油），炸进皮时，不见黄色即捞起。
 
-\step 用小包罐一个洗净，将捞起的丸子放下，加入清汤、姜、葱及剩余全部作料，放在
+\step 用小包罐一个洗净，将捞起的圆子放下，加入清汤、姜、葱及剩余全部作料，放在
 文火上烧二时。烧至半熟时将淘洗干净的苕菜放入，继续烧至熟透为止。走菜时用深圆盘
-先将四个丸子摆成四方形，将苕菜镶于四周围，将罐内的原汁灌入呈半汤形，淋入鸡油即
+先将四个圆子摆成四方形，将苕菜镶于四周围，将罐内的原汁灌入呈半汤形，淋入鸡油即
 成。
 
 \features
