--- a/latex/recipe-147.tex
+++ b/latex/recipe-147.tex
@@ -49,9 +49,9 @@
 水、盐搅打成为“鱼糁”，再分为五份，分别用五个小碗装好。
 
 \step 锅放炉上，倒入清水，烧开后移到微火上煨着。鱼糁五份，一份做成直径五分大的
-丸子；一份加红食色，搅匀成粉红色，做成丸子；一份加蛋黄粉（一钱）、菠菜汁（一
-钱）搅匀成为绿色，做成丸子；一份加蛋黄粉（二钱）搅匀成为黄色做成丸子；最后一份
-加菠菜汁（四钱）搅匀成为深绿色，做成丸子；这几种丸子做成后随即放入开水中。另把
+圆子；一份加红食色，搅匀成粉红色，做成圆子；一份加蛋黄粉（一钱）、菠菜汁（一
+钱）搅匀成为绿色，做成圆子；一份加蛋黄粉（二钱）搅匀成为黄色做成圆子；最后一份
+加菠菜汁（四钱）搅匀成为深绿色，做成圆子；这几种圆子做成后随即放入开水中。另把
 炒锅放炉上，放入特级清汤，加胡椒面、味精、盐等烧开，再将开水中的五色鱼丸放入汤
 中，稍煮起锅，盛入大汤碗中上席。
 
