--- a/latex/recipe-191.tex
+++ b/latex/recipe-191.tex
@@ -53,10 +53,10 @@
 皮各用刀切成一寸长的细丝，连同鱼翅造匀待用。
 
 \step 鸡脯、肥膘、鸡蛋清等打成“鸡糁”。用大磁盘一个，先在盘内将造匀的鱼翅等铺开
-三分之一，把鸡糁舀成二十八个糁丸子放在丝上面；再将其余的三分之二丝子均匀地盖在
-面上；然后再一个一个地拈入手中，将各丝连同糁丸子团成绣球形；在垫好纱布的笼内蒸
+三分之一，把鸡糁舀成二十八个糁圆子放在丝上面；再将其余的三分之二丝子均匀地盖在
+面上；然后再一个一个地拈入手中，将各丝连同糁圆子团成绣球形；在垫好纱布的笼内蒸
 五分钟成半成品；再拣入鱼碗内，掺好汤、胡椒、料酒少许。走菜前气热，临走时滗去蒸
-汤不用，将丸子盛入碗内，再将烧好的特级清汤注入即可。
+汤不用，将圆子盛入碗内，再将烧好的特级清汤注入即可。
 
 \features
 
