--- a/latex/recipe-019.tex
+++ b/latex/recipe-019.tex
@@ -67,8 +67,8 @@
 \vspace{.3125\baselineskip}%
 \quad\includegraphics[scale=1]{illustration-001.pdf}%
 \vspace{-.1875\baselineskip}%
-\caption{尖刀丸子作法}
-\label{尖刀丸子}
+\caption{尖刀圆子作法}
+\label{尖刀圆子}
 \end{wrapfigure}%
 \vbadness=10000%
 炸五分钟，至炸成深牙黄色时捞出，晾冷待用（俗称酥肉）。
@@ -76,7 +76,7 @@
 \step 选用肥瘦相连的猪肉二两，洗净去皮，剁为肉茸，加干豆粉（二钱）、鸡蛋（一个
 去壳）、盐（三分）混合调匀，拨一部分摊于左手上面（平摊约四分厚、一寸半宽），右
 手持刀斜刮左手的肉茸为上大下小的三角条形（俗称鲫鱼背）共十六条，分开摆于盘内，
-入笼蒸十分钟后取出晾冷待用（图\,\ref{尖刀丸子}\,俗称尖刀丸子）。
+入笼蒸十分钟后取出晾冷待用（图\,\ref{尖刀圆子}\,俗称尖刀圆子）。
 
 \step 熟猪心、猪舌均切成一寸半长的薄片。
 
@@ -126,7 +126,7 @@
 称如意蛋卷）（如图\,\ref{如意蛋卷}\,丙）。
 
 \step 用平底大碗一个，先将汆好的笋条、响皮摆在碗底；次将酥肉逐片摆成圆形，为第
-二层；又将尖刀丸子十六条分为每方四条摆成卍字形，为第三层；再将猪心、猪舌象铺瓦
+二层；又将尖刀圆子十六条分为每方四条摆成卍字形，为第三层；再将猪心、猪舌象铺瓦
 一样分别各摆半个碗，成圆形，为第四层；最后将蛋卷用刀平铲放于上面。再用火腿，把
 特级奶汤、味精、料酒灌入摆好的杂烩碗内，入笼蒸二小时取出。再用特级奶汤十两，加
 味精、盐，舀入杂烩内。另选绿色鲜菜一束，淘洗烫熟，放入碗内以衬其色即成。
