--- a/latex/recipe-033.tex
+++ b/latex/recipe-033.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{南煎丸子}
+\begin{recipe}{南煎圆子}
 
 \ingredients
 
@@ -53,12 +53,12 @@
 \step 菜心淘净，泹好；慈姑削皮；香菌洗净泥沙。
 
 \step 猪肉切成小豌豆大的丁，火腿、兰片、香菌、慈姑，分别切成细丁；葱切细花；姜
-去皮切细末。以上各材料加盐、酱油、水豆粉、鸡蛋（连黄）搅匀，共作成四个肉丸子，
+去皮切细末。以上各材料加盐、酱油、水豆粉、鸡蛋（连黄）搅匀，共作成四个肉圆子，
 略按扁。
 
 \step 油烧至七成热，肉丸煎成金黄色，捞起入碗，加姜、葱，搭汤上笼，蒸𤆵。
 
-\step 走菜时将丸子拈在盘内摆好，菜心用原汁加料酒、胡椒、盐、味精、酱油，吃味后
+\step 走菜时将圆子拈在盘内摆好，菜心用原汁加料酒、胡椒、盐、味精、酱油，吃味后
 镶在菜的周围，余汁用水豆粉扯成滋汁，加香油淋上即成。
 
 \features
