--- a/latex/recipe-188.tex
+++ b/latex/recipe-188.tex
@@ -51,8 +51,8 @@
 皮。
 
 \step 蛋皮、丝瓜皮、火腿分别切成五至六分长细丝，连同𧎼蛀丝在一个大盘内和匀抖
-散，留三分之一在盘内均匀地铺开；即将“鸡糁”舀成二十四至二十八个丸子在上面；再将
-其余三分之二的丝均匀地撒盖在丸子上面；然后再一个一个地拈入手中，将各丝连同丸子
+散，留三分之一在盘内均匀地铺开；即将“鸡糁”舀成二十四至二十八个圆子在上面；再将
+其余三分之二的丝均匀地撒盖在圆子上面；然后再一个一个地拈入手中，将各丝连同圆子
 团成绣球形；放入笼内蒸五分钟至熟取出。
 
 \step 走菜时先将“绣球”拣入蒸碗内掺清汤少许，加胡椒、料酒上笼馏热；锅内掺清汤烧
