--- a/latex/recipe-033.tex
+++ b/latex/recipe-033.tex
@@ -56,7 +56,7 @@
 去皮切细末。以上各材料加盐、酱油、水豆粉、鸡蛋（连黄）搅匀，共作成四个肉圆子，
 略按扁。
 
-\step 油烧至七成热，肉丸煎成金黄色，捞起入碗，加姜、葱，搭汤上笼，蒸𤆵。
+\step 油烧至七成热，肉圆煎成金黄色，捞起入碗，加姜、葱，搭汤上笼，蒸𤆵。
 
 \step 走菜时将圆子拈在盘内摆好，菜心用原汁加料酒、胡椒、盐、味精、酱油，吃味后
 镶在菜的周围，余汁用水豆粉扯成滋汁，加香油淋上即成。
