--- a/latex/recipe-147.tex
+++ b/latex/recipe-147.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}[五福鱼丸]{五色鱼丸}
+\begin{recipe}[五福鱼圆]{五色鱼圆}
 
 \ingredients
 
@@ -52,12 +52,12 @@
 圆子；一份加红食色，搅匀成粉红色，做成圆子；一份加蛋黄粉（一钱）、菠菜汁（一
 钱）搅匀成为绿色，做成圆子；一份加蛋黄粉（二钱）搅匀成为黄色做成圆子；最后一份
 加菠菜汁（四钱）搅匀成为深绿色，做成圆子；这几种圆子做成后随即放入开水中。另把
-炒锅放炉上，放入特级清汤，加胡椒面、味精、盐等烧开，再将开水中的五色鱼丸放入汤
+炒锅放炉上，放入特级清汤，加胡椒面、味精、盐等烧开，再将开水中的五色鱼圆放入汤
 中，稍煮起锅，盛入大汤碗中上席。
 
 \features
 
-此菜系清汤菜，汤清如水，味鲜爽口。鱼丸色分五彩，鲜艳美观。
+此菜系清汤菜，汤清如水，味鲜爽口。鱼圆色分五彩，鲜艳美观。
 
 \end{recipe}
 
