Correct notes for YUAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -88,14 +88,15 @@
 
 一七、大南瓜蒸肉。各本皆作“掏尽内穰”。据《现代汉语词典》，“穰”今作“瓤”。
 
-一八、一九，“尖刀丸子”。《四》本《八》本《七》本作“尖刀元子”。据《中》本改。
+一八、一九，“尖刀圆子”。《四》本《八》本《七》本作“尖刀元子”。《中》本作“尖刀
+丸子”。径改。
 
 一八、二七九，“汆”。《四》本《八》本作“川”。径改。
 
 一九、二〇、五六、一九五、二五四所附共十一副插图。《四》本《八》本插图，线条边
 缘参差不齐模糊不清。据《中》本插图重制。
 
-二二、三三，“肉丸”。《四》本《八》本作“肉元”。径改。
+二二、三三，“肉圆”。《四》本《八》本作“肉元”。径改。
 
 二四、四八、五五……全书各篇，“口蘑”。《四》本《八》本作“口茉”。据《中》本《重》
 本改。
@@ -109,7 +110,7 @@
 三〇、芝麻肘子。“捡去泡沫”，《四》本《八》本作“检去泡沫”。径改。“杆杖”，《四》
 本《八》本作“杆仗”。径改。
 
-三三、三四、一四七、一八八、一九一，“丸子”。《四》本《八》本作“元子”。径改。
+三三、三四、一四七、一八八、一九一，“圆子”。《四》本《八》本作“元子”。径改。
 
 三七、炸斑指。“班指”，《四》本《八》本作“斑指”。今作“扳指”。据《中》本改。
 “……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
@@ -203,7 +204,7 @@
 一四四、五柳鱼。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
 糖”，《八》本作“冰糖”。
 
-一四七、一五〇，“鱼丸”。《四》本《八》本作“鱼元”。径改。
+一四七、一五〇，“鱼圆”。《四》本《八》本作“鱼元”。径改。
 
 一四八、椒盐鱼卷。“咖喱”，《四》本《八》本作“咖哩”。径改。
 
