--- a/latex/recipe-055.tex
+++ b/latex/recipe-055.tex
@@ -33,7 +33,7 @@
 
 \ingredient{猪肘子}{（五斤）一个}
 \ingredient{酱油}{半斤}
-\ingredient{𧎼蛀}{二两五}
+\ingredient{珧柱}{二两五}
 \ingredient{肥鸭}{（四斤）一只}
 \ingredient{冰糖汁}{二两五}
 \ingredient{鸡蛋}{十个}
@@ -61,7 +61,7 @@
 \step 海参用温水泡十六小时，洗净泥砂，挖去肠脏，切成长一寸、宽六分的条方块；用
 二汤汆二次，用清水漂冷心，再用净布一方包好。鱼翅用温水泡十分钟，洗净上面的胶
 水，去净子骨和杂质，放入大碗中，加清水一斤半，上笼蒸一小时，出笼滗去水，再用二
-汤汆一次，用清水漂冷心，用稀眼净布一方包好。𧎼蛀用温水泡十分钟，洗净后用稀眼净
+汤汆一次，用清水漂冷心，用稀眼净布一方包好。珧柱用温水泡十分钟，洗净后用稀眼净
 布包好。口蘑用温水泡五分钟，洗净泥砂，去净根和杂质，用稀眼净布包好。大金钩洗
 净。墨鱼用温水泡半小时，去净骨和杂质，将每条撕成两半。猪骨洗净。猪肘子肉去净茸
 毛，刮洗干净，切成四大块。肥母鸡宰杀、去毛、去肠脏，切成两半，每半再切成两块。
@@ -81,7 +81,7 @@
 锯末五斤，架底处的锯末留一空窝，内放烧红的杠炭三段（每段长约五寸），再把大口料
 酒罈（内外有釉、无裂缝者）一个安于三脚架上。然后将猪骨垫于罈底和罈内四周，再将
 开水、料酒、姜、葱布包、盐、红白酱油、火腿、猪肘子肉、鸡肉、鸭肉、冬笋、口蘑布
-包、墨鱼、𧎼蛀、大金钩、冰糖汁等依次放入罈中。用纸封固罈口，再把锯末十五斤堆于
+包、墨鱼、珧柱、大金钩、冰糖汁等依次放入罈中。用纸封固罈口，再把锯末十五斤堆于
 罈外四周，煨四、五小时（在煨的过程中，要有专人负责看火，不能用旺火，也不能断
 火）后，撕去罈口草纸，将鱼翅布包，海参布包，炸好的鸡蛋放入罈中，再煨半小时即
 成。
