--- a/latex/recipe-186.tex
+++ b/latex/recipe-186.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{桂花𧎼蛀}
+\begin{recipe}{桂花珧柱}
 
 \ingredients
 
-\ingredient{𧎼蛀}{一两}
+\ingredient{珧柱}{一两}
 \ingredient{鸡蛋}{六个}
 \ingredient{盐}{四分}
 \ingredient{熟火腿}{三钱}
@@ -43,14 +43,14 @@
 
 \preparation
 
-\step 先将𧎼蛀去尽玉带，淘净后放入碗内，加入清水上笼蒸𤆵；将鸡蛋打破放入盐和味
+\step 先将珧柱去尽玉带，淘净后放入碗内，加入清水上笼蒸𤆵；将鸡蛋打破放入盐和味
 精调匀；再将火腿剁成细末。
 
-\step 取出笼内的𧎼蛀，滗去碗内的汁不用，用手搓散，再搅入鸡蛋。
+\step 取出笼内的珧柱，滗去碗内的汁不用，用手搓散，再搅入鸡蛋。
 
-\step 将锅放于旺火上，放入化猪油，烧至八成热时倒入拌匀的蛋及𧎼蛀，倒下时用瓢子
+\step 将锅放于旺火上，放入化猪油，烧至八成热时倒入拌匀的蛋及珧柱，倒下时用瓢子
 不停地炒转（使之不成坨），炒至干香为止。搛入走菜盘内，再倒入清汤，加盐及水豆粉
-成二流芡，淋入香油，浇在桂花𧎼蛀上，撒上火腿末子即成。
+成二流芡，淋入香油，浇在桂花珧柱上，撒上火腿末子即成。
 
 \features
 
