--- a/latex/recipe-188.tex
+++ b/latex/recipe-188.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{绣球𧎼蛀}
+\begin{recipe}{绣球珧柱}
 
 \ingredients
 
-\ingredient{𧎼蛀}{五两}
+\ingredient{珧柱}{五两}
 \ingredient{鸡脯肉}{二两}
 \ingredient{肥膘}{一两五}
 \ingredient{鸡蛋}{三个}
@@ -46,11 +46,11 @@
 
 \preparation
 
-\step 𧎼蛀抠去玉带，淘洗干净，掺清水上笼蒸𤆵，取出挤干水晾冷，搓散成丝；鸡脯、
+\step 珧柱抠去玉带，淘洗干净，掺清水上笼蒸𤆵，取出挤干水晾冷，搓散成丝；鸡脯、
 肥膘分别砸茸；鸡蛋清调匀，加清水、豆粉、味精、盐搅成“鸡糁”；用鸡蛋一个摊成蛋
 皮。
 
-\step 蛋皮、丝瓜皮、火腿分别切成五至六分长细丝，连同𧎼蛀丝在一个大盘内和匀抖
+\step 蛋皮、丝瓜皮、火腿分别切成五至六分长细丝，连同珧柱丝在一个大盘内和匀抖
 散，留三分之一在盘内均匀地铺开；即将“鸡糁”舀成二十四至二十八个圆子在上面；再将
 其余三分之二的丝均匀地撒盖在圆子上面；然后再一个一个地拈入手中，将各丝连同圆子
 团成绣球形；放入笼内蒸五分钟至熟取出。
