--- a/latex/recipe-189.tex
+++ b/latex/recipe-189.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{菊花𧎼蛀}
+\begin{recipe}{菊花珧柱}
 
 \ingredients
 
@@ -35,7 +35,7 @@
 \ingredient{肥肉}{三两}
 \ingredient{鸡蛋清}{三个}
 \ingredient{火腿}{一两五}
-\ingredient{𧎼蛀}{二两}
+\ingredient{珧柱}{二两}
 \ingredient{鲜豌豆米}{一两}
 \ingredient{特级清汤}{一斤半}
 \ingredient{盐}{五分}
@@ -46,11 +46,11 @@
 
 \preparation
 
-\step 选质好体圆的𧎼蛀，用温热水淘洗干净，加汤浸过，上笼蒸𤆵；取出晾冷，用手撕
+\step 选质好体圆的珧柱，用温热水淘洗干净，加汤浸过，上笼蒸𤆵；取出晾冷，用手撕
 成丝子。火腿要肥多、瘦少、肥痩相连的，切成六分长的二粗丝。
 
 \step 鸡脯、肥膘、蛋清等打成“鸡糁”。先用酱油碟二十四个，内抹少许的油，每个依次
-用调羹舀入鸡糁，刮平刮圆。将豌豆米铡成细末，在糁中心作花蕊，周围用𧎼蛀插上，与
+用调羹舀入鸡糁，刮平刮圆。将豌豆米铡成细末，在糁中心作花蕊，周围用珧柱插上，与
 火腿丝相隔嵌作花瓣。即上笼蒸七八分钟，熟后取出。走菜时拣入碗内，灌入特级清汤，
 或放少许豆尖即成。
 
