--- a/latex/recipe-261.tex
+++ b/latex/recipe-261.tex
@@ -42,7 +42,7 @@
 \ingredient{口蘑}{三钱}
 \ingredient{水发海参}{二两}
 \ingredient{水发鱿鱼}{二两}
-\ingredient{𧎼蛀}{三钱}
+\ingredient{珧柱}{三钱}
 \ingredient{熟火腿}{三钱}
 \ingredient{金钩}{三钱}
 \ingredient{菜心}{五两}
@@ -59,11 +59,11 @@
 
 \preparation
 
-\step 先将海参、鱿鱼、火腿切成二寸长、五分宽的片。以上的原料除去𧎼蛀、金钩外切
+\step 先将海参、鱿鱼、火腿切成二寸长、五分宽的片。以上的原料除去珧柱、金钩外切
 成大一字形条。脊髓用沸水汆过。海参、鱿鱼同样用沸水分开汆过。菜心泹后用清水漂起
 待用。
 
-\step 𧎼蛀放在蒸碗内上笼大火蒸𤆵，将锅放在旺火上，放下猪油，再放入姜葱，爆出香
+\step 珧柱放在蒸碗内上笼大火蒸𤆵，将锅放在旺火上，放下猪油，再放入姜葱，爆出香
 味后，倒入鸡汤、盐、糖汁、料酒、酱油、花椒、胡椒及以上用沸水汆过的原材料（除鱿
 鱼、海参、脊髓、小菜外）小火烧𤆵。再将小菜泹𤆵后，在白油锅内煸过，起锅垫入走菜
 盘内。再将烧𤆵后的一字条，捞入盘内放在小菜上边。鱿鱼、脊髓，放在烧一字条等原料
