--- a/latex/recipe-288.tex
+++ b/latex/recipe-288.tex
@@ -34,7 +34,7 @@
 \ingredient{肥鸭}{一只}
 \ingredient{水豆粉}{少许}
 \ingredient{食盐}{酌量}
-\ingredient{𧎼蛀}{二钱}
+\ingredient{珧柱}{二钱}
 \ingredient{绍酒}{六钱}
 \ingredient{火腿}{六钱}
 \ingredient{鸡蛋（用白）}{四个}
@@ -48,7 +48,7 @@
 心地剥下全身鸭皮，切成骨牌般大的块子，有条理地摆在碗中（皮背靠碗底），鸭皮须保
 持滋润，勿使干燥。
 
-剔下鸭脯肉连同𧎼蛀、火腿、荸荠宰碎，盛在碗内，打下蛋清，加进味精、水豆粉、胡椒
+剔下鸭脯肉连同珧柱、火腿、荸荠宰碎，盛在碗内，打下蛋清，加进味精、水豆粉、胡椒
 面、食盐、绍酒及一杓鸡汤，调拌均匀。在锅中将猪油煎辣后，放下鸭脯炒四、五分钟，
 铲在鸭皮上，上笼蒸约一分钟，取出翻在盘子上即成。
 
