--- a/latex/recipe-293.tex
+++ b/latex/recipe-293.tex
@@ -42,12 +42,12 @@
 \ingredient{胡椒、味精}{少许}
 \ingredient{鸡蛋（取白）}{二个}
 \ingredient{冰糖色}{少许}
-\ingredient{𧎼蛀（洗净蒸熟）}{三钱}
+\ingredient{珧柱（洗净蒸熟）}{三钱}
 
 \preparation
 
 取黄秧白的心，洗净抽筋后，以沸水煮软捞起，晾干水气冷透。将网油去掉较厚部分，摊
-伸铺上一层黄秧白菜，摆上火腿片、口蘑瓣和𧎼蛀丝，再盖上一层黄秧白，即裹成茄子形
+伸铺上一层黄秧白菜，摆上火腿片、口蘑瓣和珧柱丝，再盖上一层黄秧白，即裹成茄子形
 状（将以上材料裹成两只），以蛋清和豆粉调匀糊紧接口处，在滚油锅里微炸，捞起滤
 干，放进盛好鸡汤的铝锅里，同时放进绍酒、胡椒、冰糖色和鸡油等，以文火烧好为止
 （约半小时）。起锅时取出鸡油渣放进味精，先将菜盛入盘内，再将汤汁移于大火上收浓
