--- a/latex/recipe-223.tex
+++ b/latex/recipe-223.tex
@@ -39,7 +39,7 @@
 \ingredient{熟猪肚}{五钱}
 \ingredient{脑花}{一个}
 \ingredient{熟鸡肉}{一两}
-\ingredient{𧎼蛀}{三钱}
+\ingredient{珧柱}{三钱}
 \ingredient{熟蹄筋}{一两}
 \ingredient{熟猪舌}{一两}
 \ingredient{猪腰}{一个}
