--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -144,7 +144,8 @@
 
 五五、六九、一五三，“须”。《四》本作“鬚”。据《八》本改。
 
-五五、一八六、一八八……全书各篇，“𧎼蛀”。今作“珧柱”。干贝。
+五五、一八六、一八八……全书各篇，“珧柱”。《四》本《八》本作“𧎼蛀”。《中》本作
+“𧎼柱”。径改。
 
 五六、烤酥方。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本皆
 作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
