--- a/latex/recipe-037.tex
+++ b/latex/recipe-037.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{炸班指}
+\begin{recipe}{炸扳指}
 
 \ingredients
 
@@ -64,7 +64,7 @@
 
 \step 葱白用刀切成一寸长段，两头切成细花翻起。甜酱用香油、白糖拌合调匀。大蒜去
 皮，切成四分见方、半分厚的片。生菜洗净，用香油、醋少许、蛋黄、白糖、咖喱拌合
-（炸班指时才拌）。葱、姜、大蒜分别用刀切成细末，和香油、料酒、清汤、水豆粉、白
+（炸扳指时才拌）。葱、姜、大蒜分别用刀切成细末，和香油、料酒、清汤、水豆粉、白
 糖、醋、酱油等佐料，用碗盛好调匀，成为糖醋汁。
 
 \step 菜油倒入炒锅内烧沸，将蒸好的肥肠取出（要炸时才取，葱、姜等不要），放在盘
@@ -72,12 +72,12 @@
 为肠内有水，刚一下锅要炸几下，溅起来的油容易烫伤人）。炸时要用汤瓢拨动肥肠，以
 便炸匀。约五分钟，肠呈金红色，即把油滗去，淋上香油，颠两下即捞出。然后在案板上
 用刀把肥肠切成四分厚的圆圈，堆在盘的中间，盘的两端分别放上拌好的生菜和葱酱蒜。
-再在炸班指的原锅内将糖醋汁煎热，盛在两个汤杯内，与班指一同上桌。
+再在炸扳指的原锅内将糖醋汁煎热，盛在两个汤杯内，与扳指一同上桌。
 
 \features
 
 此菜色泽金红，皮酥里嫩，细软而香，吃时可佐以葱酱蒜，也可以蘸糖醋汁，还可以伴生
-菜叶，都各有风味。因肥肠成圆形，似射箭的班指一样，故名。
+菜叶，都各有风味。因肥肠成圆形，似射箭的扳指一样，故名。
 
 \end{recipe}
 
