--- a/latex/recipe-267.tex
+++ b/latex/recipe-267.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{炸班指}
+\begin{recipe}{炸扳指}
 
 \ingredients
 
