Correct notes for BANZHI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -112,7 +112,7 @@
 
 三三、三四、一四七、一八八、一九一，“圆子”。《四》本《八》本作“元子”。径改。
 
-三七、炸斑指。“班指”，《四》本《八》本作“斑指”。今作“扳指”。据《中》本改。
+三七、炸扳指。“扳指”；《四》本《八》本作“斑指”，《中》本作“班指”。径改。
 “……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
@@ -250,7 +250,7 @@
 （烩）。”《四》本《八》本括号部分在句号后面。《中》本无括号部分内容。据《标点
 符号用法》\textsc{gb/t 15834--2011}，将括号部分移至句号之前。
 
-二六七、炸班指。“班指”，《四》本《八》本《重》本作“斑指”。径改。
+二六七、炸扳指。“扳指”，《四》本《八》本《重》本作“斑指”。径改。
 
 二六七、三〇八，“汆一道”。《四》本《八》本作“川一道”。径改。
 
