Revise note for SAI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -186,7 +186,7 @@
 
 一二〇、一二一、一二三、二二三、二五七、二六二，“𬂁”。“肫”之异体字。鸟类的胃。
 
-一二〇、一二九、一三〇……全书各篇，“鳃”。各本作“腮”。径改。
+一二〇、一二九、一三〇……全书各篇，“鳃”。各本皆作“腮”。径改。
 
 一二一、汆双脆。《四》本《八》本标题作“川双脆”。径改。
 
