Correct colon and semicolon

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -112,7 +112,7 @@
 
 三三、三四、一四七、一八八、一九一，“圆子”。《四》本《八》本作“元子”。径改。
 
-三七、炸扳指。“扳指”；《四》本《八》本作“斑指”，《中》本作“班指”。径改。
+三七、炸扳指。“扳指”，《四》本《八》本作“斑指”，《中》本作“班指”。径改。
 “……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
@@ -170,7 +170,7 @@
 八七、牡丹鸡片。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
 九四、五彩鸡片。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
-（紧）夹；扎；刺。
+（紧）夹，扎，刺。
 
 九五、刷把鸡丝。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》
 本作“气”。误。
