--- a/latex/recipe-008.tex
+++ b/latex/recipe-008.tex
@@ -34,7 +34,7 @@
 \ingredient{猪肉}{二斤}
 \ingredient{青蒜}{二两}
 \ingredient{化猪油}{一两}
-\ingredient{𰪿糟浮子}{一两}
+\ingredient{醪糟浮子}{一两}
 \ingredient{花椒}{数粒}
 \ingredient{葱}{二钱}
 \ingredient{姜}{一钱}
@@ -46,7 +46,7 @@
 \preparation
 
 \step 猪肉去毛，刮洗干净。于沸水中微煮，除去血腥味，取出，切成三条界方块。加
-盐、𰪿糟浮子，拌和均匀后加葱、姜，上笼旱蒸，至七、八成𤆵，晾冷待切。
+盐、醪糟浮子，拌和均匀后加葱、姜，上笼旱蒸，至七、八成𤆵，晾冷待切。
 
 \step 青蒜洗净，切为六至七分长的节；豆瓣剁细；蒸好的肉切成二分厚、一寸二宽、
 一寸五长、肥瘦相连的片。
