--- a/latex/recipe-011.tex
+++ b/latex/recipe-011.tex
@@ -40,7 +40,7 @@
 \ingredient{葱叶}{一钱}
 \ingredient{鲜碗豆}{四两}
 \ingredient{红糖}{三钱}
-\ingredient{𰪿糟}{三钱}
+\ingredient{醪糟}{三钱}
 \ingredient{姜米}{一钱}
 \ingredient{咸红酱油}{三钱}
 \ingredient{豆腐乳水}{三钱}
@@ -49,7 +49,7 @@
 
 \step 选用肥膘猪肉，用温水洗净，刮去茸毛，切成三寸长、一分半厚、一寸二宽的肉片。
 
-\step 花椒、葱叶混合剁成细末，与红酱油、酱油、𰪿糟、豆腐乳水、红糖、大米粉一两
+\step 花椒、葱叶混合剁成细末，与红酱油、酱油、醪糟、豆腐乳水、红糖、大米粉一两
 四钱，二汤，连同切好的肉片放入深碗内一起调拌均匀。然后将拌好配料的肉片逐片鱼鳞
 式地平铺于蒸碗内，有皮部分靠近碗底，瘦肉在上面，两旁再用肉片一片片地镶装整齐。
 
