--- a/latex/recipe-035.tex
+++ b/latex/recipe-035.tex
@@ -36,7 +36,7 @@
 \ingredient{五香粉}{半分}
 \ingredient{面包}{一个}
 \ingredient{花椒面}{一分}
-\ingredient{𰪿糟}{五钱}
+\ingredient{醪糟}{五钱}
 \ingredient{酱油}{五钱}
 \ingredient{豆腐乳水}{五钱}
 \ingredient{姜米}{一钱}
@@ -52,7 +52,7 @@
 \preparation
 
 \step 猪肉刮洗干净，切成两寸长、一分半厚的片，装在大碗内。将花椒、五香粉、酱
-油、豆腐乳水、𰪿糟、白糖、姜米、葱花、盐、料酒在碗内兑好调匀。豌豆洗净。面包揉
+油、豆腐乳水、醪糟、白糖、姜米、葱花、盐、料酒在碗内兑好调匀。豌豆洗净。面包揉
 成细粉。鸡蛋打破搅匀。盐、花椒合成椒盐。
 
 \step 将兑好的调料倒在肉片碗内造匀，码二十分钟，再加米粉、豌豆，拌匀后，将肉片
