--- a/latex/recipe-054.tex
+++ b/latex/recipe-054.tex
@@ -41,7 +41,7 @@
 \ingredient{味精}{三分}
 \ingredient{生细豆渣}{一斤半}
 \ingredient{清汤}{三斤}
-\ingredient{𰪿糟}{二两五}
+\ingredient{醪糟}{二两五}
 \ingredient{盐}{六分}
 \ingredient{酱油}{一两}
 \ingredient{草果}{二钱}
@@ -63,7 +63,7 @@
 \step 姜、葱洗净，用刀把姜拍松，用稀眼净布把姜、大葱、花椒、胡椒、八角、草果包
 好待用。
 
-\step 用大面砂锅一个，将清汤、料酒、𰪿糟、冰糖汁、盐、酱油、姜、葱布包一起放
+\step 用大面砂锅一个，将清汤、料酒、醪糟、冰糖汁、盐、酱油、姜、葱布包一起放
 入，再放入猪头骨，随后将猪头肉放在头骨之上，用旺火烧开，然后将锅口用草纸封后继
 续用旺火烧四小时左右，扯去草纸，捞出猪头肉盛入大圆盘中，再将砂锅中的原汁倒入锅
 中熬酽，然后放入炒好的豆渣与味精拌匀，淋于猪头肉之上入席。
