--- a/latex/recipe-073.tex
+++ b/latex/recipe-073.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{活鸡一只}{约三斤}
-\ingredient{𰪿糟浮子}{一两}
+\ingredient{醪糟浮子}{一两}
 \ingredient{盐}{三钱}
 \ingredient{花椒}{数粒}
 \ingredient{葱白}{二钱}
@@ -41,7 +41,7 @@
 
 \preparation
 
-\step 杀鸡、去毛、去脏腹、去足爪，出一水，将血水提净，除净细毛，全身抹盐和𰪿糟
+\step 杀鸡、去毛、去脏腹、去足爪，出一水，将血水提净，除净细毛，全身抹盐和醪糟
 浮子；加葱、姜、花椒、生鸡油等，用大鱼碗盛起。
 
 \step 用小木甑一个，将箅子翻转垫平；锅内将水烧沸，木甑放上，鸡碗置甑内；再用尖
