--- a/latex/recipe-078.tex
+++ b/latex/recipe-078.tex
@@ -41,7 +41,7 @@
 \ingredient{白糖}{三钱}
 \ingredient{胡椒面}{三分}
 \ingredient{味精}{三分}
-\ingredient{𰪿糟}{五钱}
+\ingredient{醪糟}{五钱}
 \ingredient{香油}{一两}
 \ingredient{清汤}{四两}
 \ingredient{菜油}{一斤半耗二两}
@@ -50,7 +50,7 @@
 
 \step 仔鸡宰杀后去血退毛，清洗干净，从背脊部砍开，挖去内脏，去掉足爪不用，再清
 洗一次。再用刀尖将鸡脯及鸡腿的肉剖开，把腿、翅、骨微微宰断，用手将盐、葱、姜、
-酱油、𰪿糟、料酒、花椒等抹在鸡的内外，抹匀，渍一小时。
+酱油、醪糟、料酒、花椒等抹在鸡的内外，抹匀，渍一小时。
 
 \step 将锅放在旺火上，倒下菜油，烧至八、九成热时将鸡取出搽干（原汁留用），投入
 油锅内炸熟炸透；滗去余油，将抹鸡时的原汁一并倒入锅内，放下胡椒、白糖、香油、味
