--- a/latex/recipe-109.tex
+++ b/latex/recipe-109.tex
@@ -35,7 +35,7 @@
 \ingredient{胡椒面}{二分}
 \ingredient{鲜黄豆}{五两}
 \ingredient{姜}{五钱}
-\ingredient{𰪿糟浮子}{四两}
+\ingredient{醪糟浮子}{四两}
 \ingredient{花椒}{约三十颗}
 \ingredient{盐}{六分}
 \ingredient{葱}{五钱}
@@ -45,7 +45,7 @@
 
 \preparation
 
-\step 选水盆鸭子小开洗净，用盐和𰪿糟浮子调匀，满身内外涂遍，然后将葱、姜、花椒
+\step 选水盆鸭子小开洗净，用盐和醪糟浮子调匀，满身内外涂遍，然后将葱、姜、花椒
 放入腹内，加汤、放胡椒，上笼旺火蒸𤆵后，取出晾冷，取去骨架，原汤滗出，去掉姜、
 葱渣等，晾冷待用。
 
