--- a/latex/recipe-115.tex
+++ b/latex/recipe-115.tex
@@ -33,7 +33,7 @@
 
 \ingredient{肥公鸭一只}{三斤}
 \ingredient{味精}{二分}
-\ingredient{𰪿糟}{一两}
+\ingredient{醪糟}{一两}
 \ingredient{花茶}{一两}
 \ingredient{香樟树叶}{一两}
 \ingredient{葱}{二两五}
@@ -55,7 +55,7 @@
 横割一刀，约二寸长，由此刀口中将鸭的脏腹挖取干净，再用水洗净，晾干水。葱去叶和
 须，用葱白，切成一寸半长的段，盛盘中待用。
 
-\step 用碗将花椒、盐、胡椒面拌匀，抹于鸭腹之中。再将料酒和𰪿糟拌匀，涂在鸭皮
+\step 用碗将花椒、盐、胡椒面拌匀，抹于鸭腹之中。再将料酒和醪糟拌匀，涂在鸭皮
 上。余下的抹于鸭腹之中。然后将鹎放盆内醃十二小时，晾干水。
 
 \step 将花茶、锯末、柏枝、香樟树叶一起和匀，平均分为三份。把木盆一个（高约四寸
