--- a/latex/recipe-130.tex
+++ b/latex/recipe-130.tex
@@ -38,7 +38,7 @@
 \ingredient{清汤}{半斤}
 \ingredient{醋}{一钱}
 \ingredient{泡鱼辣椒}{一两}
-\ingredient{𰪿糟浮子}{五钱}
+\ingredient{醪糟浮子}{五钱}
 \ingredient{菜油}{一斤耗三两}
 \ingredient{姜米}{三钱}
 \ingredient{葱子}{三钱}
@@ -52,7 +52,7 @@
 的短节细丝，姜、蒜去皮连同鱼辣椒剁为细末，葱子切成细花。
 
 \step 菜油在旺火上烧红，将鱼放入锅内炸三分钟，至鱼身现震裂纹时将油滗去，留二
-两菜油在锅内。将鱼辣椒、姜、蒜、葱、𰪿糟等下锅煵出香味，依次放入料酒、酱油、
+两菜油在锅内。将鱼辣椒、姜、蒜、葱、醪糟等下锅煵出香味，依次放入料酒、酱油、
 红酱油、清汤等，将鱼用中火烧起，汤开后放泡青菜，翻面约十分钟，待鱼入味后再放
 葱花、香油，勾芡起锅。
 
