--- a/latex/recipe-131.tex
+++ b/latex/recipe-131.tex
@@ -38,7 +38,7 @@
 \ingredient{料酒}{四钱}
 \ingredient{蒜}{二钱五}
 \ingredient{姜}{二钱}
-\ingredient{𰪿糟}{六钱}
+\ingredient{醪糟}{六钱}
 \ingredient{葱白}{二钱}
 \ingredient{味精}{六分}
 \ingredient{细豆瓣}{六钱}
@@ -59,7 +59,7 @@
 \step 锅在旺火上放入猪油，烧至八成热时投入鲫鱼，稍煎至两面均呈浅黄色时，把炒
 锅放斜，将鱼拨在锅边，用原油将剁细的豆瓣炸酥，再将炒锅放正，把鱼拨还原，随即加
 以料酒，并依次加入酱油、清汤、姜、蒜、葱白。这时就将焅好的豆腐滗去汤汁，同鱼一
-起和烧十分钟左右，放入𰪿糟、甜酱、味精用汤瓢轻轻搅转，即用筷子将豆腐拨开，把鱼
+起和烧十分钟左右，放入醪糟、甜酱、味精用汤瓢轻轻搅转，即用筷子将豆腐拨开，把鱼
 拈出放在较大的窝盘内，随即用水豆粉勾芡，将豆腐连汁倒在鱼面上即成。
 
 \features
