--- a/latex/recipe-133.tex
+++ b/latex/recipe-133.tex
@@ -40,7 +40,7 @@
 \ingredient{酱油}{三钱}
 \ingredient{清汤}{六两}
 \ingredient{葱}{二两}
-\ingredient{𰪿糟}{五钱}
+\ingredient{醪糟}{五钱}
 \ingredient{味精}{三分}
 \ingredient{泡辣椒}{数根}
 \ingredient{料酒}{五钱}
@@ -56,7 +56,7 @@
 蒂、去尖、去籽，切成一寸五长的节；姜切成一寸长、二分宽、半分厚的片子。
 
 \step 炒锅在旺火上烧红，舀入菜油，浪转滗去，再换一两，将肉末下锅煵至散籽、亮
-油、煵酥，先放盐、料酒、姜、葱再煵一下，即放鱼、𰪿糟、白糖、酱油，掺入清汤，在
+油、煵酥，先放盐、料酒、姜、葱再煵一下，即放鱼、醪糟、白糖、酱油，掺入清汤，在
 中火上烧十分钟，翻面再烧，烧至收干亮油。起锅时淋入香油，拈鱼入盘，再将锅内调料
 造匀，搛在鱼上即成。
 
