--- a/latex/recipe-136.tex
+++ b/latex/recipe-136.tex
@@ -33,7 +33,7 @@
 
 \ingredient{鲫鱼}{一斤}
 \ingredient{葱子}{八两}
-\ingredient{𰪿糟浮子}{一两}
+\ingredient{醪糟浮子}{一两}
 \ingredient{酱油}{一两}
 \ingredient{味精}{二分}
 \ingredient{菜油}{一斤耗二两}
