--- a/latex/recipe-165.tex
+++ b/latex/recipe-165.tex
@@ -42,7 +42,7 @@
 \ingredient{姜}{一两}
 \ingredient{大葱}{二两}
 \ingredient{料酒}{三两}
-\ingredient{𰪿糟}{一两五}
+\ingredient{醪糟}{一两五}
 \ingredient{花椒}{十余颗}
 \ingredient{胡椒}{十余颗}
 \ingredient{咸红酱油}{一两三}
@@ -60,7 +60,7 @@
 \step 炒锅放炉上，放入清水，将雪猪肉、鸡块一起放入锅中煮二、三分钟，去净血水
 泡沫，然后捞出，在清凉水中漂冷后，清洗干净待用（最好多汆几次）。
 
-\step 砂锅放炉上，放入特级清汤，再将料酒、𰪿糟、姜葱布包、红白酱油、盐等全部放
+\step 砂锅放炉上，放入特级清汤，再将料酒、醪糟、姜葱布包、红白酱油、盐等全部放
 入烧开。然后将切好的鸡块、蘑菇、冬笋、火腿、雪猪肉等放入，用旺火烧开，再用草纸
 固封锅口。随后改用微火煨二小时，这时各种原料都已𤆵烂，撕去锅口草纸。取出葱、姜
 布包不用；用漏瓢将菜舀入大圆盘中，雪猪盖在面上。再将炒锅中的原汁加味精，用旺火
