--- a/latex/recipe-272.tex
+++ b/latex/recipe-272.tex
@@ -44,13 +44,13 @@
 \ingredient{白糖}{少许}
 \ingredient{酱油}{六钱}
 \ingredient{肉汤}{二杓}
-\ingredient{𰪿糟汁}{六钱}
+\ingredient{醪糟汁}{六钱}
 
 \preparation
 
 鱼杀后去甲、鳃和内脏，洗净，在鱼的两侧肉上用刀斜划约两颗米深的刀线，每线距离约
 一寸。在滚油锅里炸约一分钟，再用猪油在烧红的锅内煎辣，倾入豆瓣炒酥，即掺进肉汤，
-稍煮后捞起豆瓣渣不要，及时放进鱼，倾入肥膘、蒜米、姜米、绍酒、𰪿糟汁、酱油、白
+稍煮后捞起豆瓣渣不要，及时放进鱼，倾入肥膘、蒜米、姜米、绍酒、醪糟汁、酱油、白
 糖等，置文火上烧好为止（约半小时）。起锅时先将鱼取出盛入盘内，再将葱颗、味精、
 醋等放进汤汁里，移在武火上，烧片刻以收干水份，使汤汁浓稠，淋在鱼上即成。
 
