--- a/latex/recipe-282.tex
+++ b/latex/recipe-282.tex
@@ -33,7 +33,7 @@
 
 \ingredient{带壳冬笋}{五斤}
 \ingredient{小磨麻油}{二两}
-\ingredient{𰪿糟汁}{六钱}
+\ingredient{醪糟汁}{六钱}
 \ingredient{味精}{少许}
 \ingredient{酱油}{少许}
 \ingredient{白糖}{少许}
