--- a/latex/recipe-298.tex
+++ b/latex/recipe-298.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{瘦牛肉}{五两}
-\ingredient{𰪿糟汁}{少许}
+\ingredient{醪糟汁}{少许}
 \ingredient{芹菜（切节子）}{三两}
 \ingredient{菜油}{三两}
 \ingredient{姜（切丝）}{少许}
@@ -45,7 +45,7 @@
 \preparation
 
 牛肉洗净切丝，油锅烧辣后，下牛肉、食盐、姜丝煸炒，牛肉将煸干时，下豆瓣，微煸
-后，随下𰪿糟汁、芹菜、蒜苗、酱油，再行煸炒，待蒜苗煸熟即行起锅，撒上少许花椒
+后，随下醪糟汁、芹菜、蒜苗、酱油，再行煸炒，待蒜苗煸熟即行起锅，撒上少许花椒
 面。
 
 \features
