--- a/latex/recipe-119.tex
+++ b/latex/recipe-119.tex
@@ -34,7 +34,7 @@
 \ingredient{鸭肝}{八副}
 \ingredient{料酒}{少许}
 \ingredient{盐}{少许}
-\ingredient{𰪿糟浮子}{一两}
+\ingredient{醪糟浮子}{一两}
 \ingredient{酱油}{六钱}
 \ingredient{香油}{一分}
 \ingredient{甜酱}{二钱}
@@ -52,7 +52,7 @@
 \step 建兰菜只掐嫩心，洗净，在锅内放猪油、料酒、盐（少许）煸熟（保持脆性）在盘
 内作底。
 
-\step 𰪿糟浮子、甜酱、酱油、胡椒面、白糖、味精、水豆粉及清汤少许兑成滋汁。
+\step 醪糟浮子、甜酱、酱油、胡椒面、白糖、味精、水豆粉及清汤少许兑成滋汁。
 
 \step 炒锅在旺火上烧红，舀入猪油浪匀滗去，再换温油，鸭肝倒下用瓢子轻轻将油浪转
 炒匀，鸭肝快熟时即烹滋汁炒几下，淋香油将锅两簸即起锅。
