--- a/latex/recipe-211.tex
+++ b/latex/recipe-211.tex
@@ -40,7 +40,7 @@
 \ingredient{白糖}{一钱}
 \ingredient{香油}{一钱}
 \ingredient{料酒}{二钱}
-\ingredient{𰪿糟浮子}{一钱}
+\ingredient{醪糟浮子}{一钱}
 \ingredient{化猪油}{八两耗二两}
 
 \preparation
@@ -50,7 +50,7 @@
 用旺火将油烧至八成热，将冬笋条倒入锅内炸成牙黄色，用漏瓢将笋子捞起待用。
 
 \step 芽菜淘洗后挤干，与猪肉分别剁成细末。炒锅在旺火上用化油一两五将肉末煵干水
-气至亮油，依次放入盐、料酒、冬笋、酱油、𰪿糟、味精，将冬笋造匀，再倒芽菜，煸一
+气至亮油，依次放入盐、料酒、冬笋、酱油、醪糟、味精，将冬笋造匀，再倒芽菜，煸一
 分钟时间放入香油，把炒锅几簸，上盘。
 
 \features
