Correct note for LAOZAO

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -80,8 +80,8 @@
 
 七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
-八、一一、一六……全书各篇，“𰪿糟”。“𰪿”系“𫃑”之类推简化字。据《现代汉语词典》，
-今作“醪糟”。
+八、一一、一六……全书各篇，“醪糟”，各本皆作“𰪿糟”。径改。“𰪿”系“𫃑”之类推简化
+字。
 
 九、芙蓉肉片。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》
 本改。
