Revise note for CHAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -152,7 +152,7 @@
 《中》本改。
 
 六三、辣子鸡丁。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
-读作{ch\'{a}n}{ㄔ\kern-.25emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
+{ch\'{a}n}{ㄔ\kern-.25emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
 六七、六八、八二、九二、一一八、一二七、一五〇、二五五、二八〇、三〇一，“熘”。
 《四》本《八》本作“溜”。径改。
