--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -175,7 +175,7 @@
 九五、刷把鸡丝。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》
 本作“气”。误。
 
-一〇〇、包烧鸡。“𫃕”，{c\'{i}}{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}
+一〇〇、泥糊鸡。“𫃕”，{c\'{i}}{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}
 粘稠。
 
 一〇一、包烧鸡。“鸡翘”，鸡屁股。
