Revise note for recipe 037

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -112,8 +112,8 @@
 
 三三、三四、一四七、一八八、一九一，“圆子”。《四》本《八》本作“元子”。径改。
 
-三七、炸扳指。“扳指”，《四》本《八》本作“斑指”，《中》本作“班指”。径改。
-“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
+三七、炸扳指。“扳指”，《四》本《八》本作“斑指”，《中》本《七》本作“班指”。径
+改。“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
 三九、四八、四九，“擀”。《四》本作“扞”。据《八》本改。
 
