--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -96,6 +96,9 @@
 一九、二〇、五六、一九五、二五四所附共十一副插图。《四》本《八》本插图，线条边
 缘参差不齐模糊不清。据《中》本插图重制。
 
+二一、八四、一七五、二二七、二四八，“棋子块”。《四》本《八》本作“旗子块”。径
+改。
+
 二二、三三，“肉圆”。《四》本《八》本作“肉元”。径改。
 
 二四、四八、五五……全书各篇，“口蘑”。《四》本《八》本作“口茉”。据《中》本《重》
