Fix typo - WUFEN

--- a/latex/recipe-210.tex
+++ b/latex/recipe-210.tex
@@ -47,9 +47,9 @@
 \preparation
 
 \step 慈笋剥去外壳，用刀削去外表老茎，把前端较嫩的切成薄片，愈薄愈好。锅内加清
-水一碗和白矾，烧沸放入慈笋片汆约驾钟，除去苦味，汆后漂于清水中（如吃笋的原味，
-则不用白矾水汆）。白色熟鸡皮切成一寸大的菱形块，加料酒、二汤，入笼蒸二十分钟待
-用。
+水一碗和白矾，烧沸放入慈笋片汆约五分钟，除去苦味，汆后漂于清水中（如吃笋的原
+味，则不用白矾水汆）。白色熟鸡皮切成一寸大的菱形块，加料酒、二汤，入笼蒸二十分
+钟待用。
 
 \step 猪油入锅内烧热，放入姜、葱，加奶汤烧开后，拣去姜、葱，放入笋片，约烧五分
 钟，加味精，再将蒸好的鸡皮放入，随后加鸡油，盛入汤盘即成。
