--- a/latex/recipe-116.tex
+++ b/latex/recipe-116.tex
@@ -64,7 +64,7 @@
 鸭皮翻在里面，肉在外面，故须翻过来），使鸭皮朝外，成为一只无骨的完整全鸭。再从
 蒸笼内取出八宝掐全部装入鸭腹内，在刀口处将鸭颈皮打一个结，以免腹中的馅漏出。然
 后放入汤锅中烫三分钟后捞出，再入清水中，摘尽茸毛。用料酒、盐、胡椒面等和匀，抹
-满鸭的全身。将鸭腹朝下，鸭背向上放于大蒸碗中，鸭头放于鹎背两翅盼中间，上笼蒸一
+满鸭的全身。将鸭腹朝下，鸭背向上放于大蒸碗中，鸭头放于鸭背两翅盼中间，上笼蒸一
 点半钟，出笼晾干水气。
 
 \step 菜油在锅内烧至将见油烟时，将鸭子放入油中炸五分钟，炸至皮酥，并呈金黄色时
