--- a/latex/recipe-115.tex
+++ b/latex/recipe-115.tex
@@ -56,7 +56,7 @@
 须，用葱白，切成一寸半长的段，盛盘中待用。
 
 \step 用碗将花椒、盐、胡椒面拌匀，抹于鸭腹之中。再将料酒和醪糟拌匀，涂在鸭皮
-上。余下的抹于鸭腹之中。然后将鹎放盆内醃十二小时，晾干水。
+上。余下的抹于鸭腹之中。然后将鸭放盆内醃十二小时，晾干水。
 
 \step 将花茶、锯末、柏枝、香樟树叶一起和匀，平均分为三份。把木盆一个（高约四寸
 ）放平地上，将茶叶、锯末等一份，放入一土碗中，再从炉内夹一段烧红的炭放在茶叶、
