--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -115,6 +115,10 @@
 
 三三、三四、一四七、一八八、一九一，“圆子”。《四》本《八》本作“元子”。径改。
 
+三四、四二、六八、八八、八九、九三、九七、一一七、一二七、一五一、一五四、一六
+〇、一六三、二〇〇、二〇二、二〇六、二三七、二四〇、二五〇，“慈姑”。《四》本
+《八》本作“慈菇”。径改。
+
 三七、炸扳指。“扳指”，《四》本《八》本作“斑指”，《中》本《七》本作“班指”。径
 改。“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
