--- a/latex/recipe-264.tex
+++ b/latex/recipe-264.tex
@@ -59,8 +59,8 @@
 内煮熟待用。
 
 \step 鲜笋煮熟后切成一寸五长的头粗丝。火腿、冬菇，切成同样的一字条，分开放在盘
-内；再抽去鸡翅及猪排的杆子骨；用铁夹将火腿、鲜笋、冬菇各夹一丝入抽去杆子骨处，
-即成龙凤翅（鸡翅为凤，猪排为龙），放入盘内待用。
+内；再抽去鸡翅及猪排的前杄子骨；用铁夹将火腿、鲜笋、冬菇各夹一丝入抽去杄子骨
+处，即成龙凤翅（鸡翅为凤，猪排为龙），放入盘内待用。
 
 \step 生鸡、猪骨，用清水洗净，除去血水，放入罐内；龙凤翅放于罐内生鸡骨上面。
 
