Add a note for recipe 264

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -255,6 +255,9 @@
 （烩）。”《四》本《八》本括号部分在句号后面。《中》本无括号部分内容。据《标点
 符号用法》\textsc{gb/t 15834--2011}，将括号部分移至句号之前。
 
+二六四、酿两样。“抽去……扦子骨……入抽去扦子骨处”。“扦”，《四》本作“杄”，《八》
+本作“\scalebox{.7}[1]{林}\kern-.12em\scalebox{.5}[1]{\bfseries 千}”。径改。
+
 二六七、炸扳指。“扳指”，《四》本《八》本《重》本作“斑指”。径改。
 
 二六七、三〇八，“汆一道”。《四》本《八》本作“川一道”。径改。
