Fix note for GUOBA

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -76,7 +76,7 @@
 四、二四、七一……全书各篇，“搛”。《四》本《八》本作“扦”。径改。“搛”，（用筷子）
 夹。
 
-六、锅巴肉片。《四》本《八》本标题作“锅粑肉片”。据《中》本改。
+六、锅巴肉片。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
 
 七、水煮肉片。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
