--- a/latex/recipe-050.tex
+++ b/latex/recipe-050.tex
@@ -37,7 +37,7 @@
 \ingredient{箩粉}{五两}
 \ingredient{姜}{二钱}
 \ingredient{醋}{六钱}
-\ingredient{蕃茄}{五两}
+\ingredient{番茄}{五两}
 \ingredient{大蒜}{二钱}
 \ingredient{红酱油}{少许}
 \ingredient{熟油辣椒}{三钱}
@@ -58,7 +58,7 @@
 焖十分钟揭盖，即将碱水滗去，另换清水；每隔五分钟换一次，如是换四次，直到将碱味
 去掉为止。此时肚片则变为细嫩、柔软、半透明，如玻璃体状。
 
-\step 箩粉用刀切成大姜糖块形（即大斜方形），用盐、香油少许拌过；蕃茄先用沸水烫
+\step 箩粉用刀切成大姜糖块形（即大斜方形），用盐、香油少许拌过；番茄先用沸水烫
 后，撕皮去蒂，片成薄片。
 
 \step 葱叶、花椒加盐少许，在菜墩上用刀共同铡成细末，加白酱油、香油及红酱油各少
@@ -66,7 +66,7 @@
 油、白酱油、醋少许，兑成红油调料；生姜去皮，切成姜米，加醋、白酱油、香油少许，
 兑成姜汁调料。以上四种调料分别盛入四个汤杯。
 
-\step 走菜时肚片在开水内冒后，滤干水份放入大盘中间，周围镶以蕃茄片、箩粉片，相
+\step 走菜时肚片在开水内冒后，滤干水份放入大盘中间，周围镶以番茄片、箩粉片，相
 互间隔摆好，连同四个调料汤杯，随菜上席。
 
 \features
