--- a/latex/recipe-079.tex
+++ b/latex/recipe-079.tex
@@ -39,7 +39,7 @@
 \ingredient{盐}{三分}
 \ingredient{料酒}{五钱}
 \ingredient{白糖}{三钱}
-\ingredient{蕃茄酱}{五钱}
+\ingredient{番茄酱}{五钱}
 \ingredient{酱油}{五钱}
 \ingredient{葱段}{五钱}
 \ingredient{姜}{三钱}
