--- a/latex/recipe-091.tex
+++ b/latex/recipe-091.tex
@@ -40,7 +40,7 @@
 \ingredient{酱油}{二钱}
 \ingredient{生菜}{三两}
 \ingredient{香油}{三钱}
-\ingredient{蕃茄酱}{三钱}
+\ingredient{番茄酱}{三钱}
 \ingredient{醋}{三钱}
 \ingredient{白糖}{二两五}
 \ingredient{化猪油}{一两五约耗四钱}
@@ -67,7 +67,7 @@
 在条盘的一端。
 
 \step 生菜择用菜心及叶尖部分，淘洗干净，用白糖、醋、香油拌合（生菜不能早拌，早
-拌要出水），镶在盘内的另一端；再将蕃茄酱淋在生菜上面；葱白切成一寸二长的段，甜
+拌要出水），镶在盘内的另一端；再将番茄酱淋在生菜上面；葱白切成一寸二长的段，甜
 酱用香油、白糖拌合调匀，分别放在盘的中部两边即成。
 
 \features
