--- a/latex/recipe-158.tex
+++ b/latex/recipe-158.tex
@@ -27,13 +27,13 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{蕃茄炒虾仁}
+\begin{recipe}{番茄炒虾仁}
 
 \ingredients
 
 \ingredient{鲜虾}{一斤半}
 \ingredient{料酒}{少许}
-\ingredient{蕃茄}{四两}
+\ingredient{番茄}{四两}
 \ingredient{化猪油}{四两耗一两五}
 \ingredient{盐}{一钱五}
 \ingredient{香油}{少许}
@@ -43,12 +43,12 @@
 
 \preparation
 
-\step 鲜虾挤肉，淘洗干净，蕃茄烫后去皮、去蒂、去籽，用刀切成与虾肉大的丁颗。
+\step 鲜虾挤肉，淘洗干净，番茄烫后去皮、去蒂、去籽，用刀切成与虾肉大的丁颗。
 
 \step 虾肉滤干水份，与蛋清豆粉加盐少许调匀。水豆粉、盐、鸡汤各少许兑成滋汁。
 
-\step 猪油烧至五成火候，撒下虾肉，用筷子滑散，即将蕃茄投入，急炒几下，立即烹入
-滋汁，放香油，簸几下马上起锅。（如蕃茄水份较重，滋汁的汤和水豆粉宜少。）
+\step 猪油烧至五成火候，撒下虾肉，用筷子滑散，即将番茄投入，急炒几下，立即烹入
+滋汁，放香油，簸几下马上起锅。（如番茄水份较重，滋汁的汤和水豆粉宜少。）
 
 \features
 
