--- a/latex/recipe-256.tex
+++ b/latex/recipe-256.tex
@@ -42,7 +42,7 @@
 \ingredient{芝麻}{五钱}
 \ingredient{绿色小菜}{一两}
 \ingredient{香油}{五钱}
-\ingredient{蕃茄酱}{五钱}
+\ingredient{番茄酱}{五钱}
 \ingredient{生菜}{三两}
 \ingredient{白糖}{三钱}
 \ingredient{醋}{三钱}
