--- a/latex/recipe-274.tex
+++ b/latex/recipe-274.tex
@@ -46,7 +46,7 @@
 
 将鱼剔去刺骨，同样片成块状薄片，在蛋清豆粉内拌过后，贴在肉上。
 
-锅烧辣后下油，随即将上述肉块用文火煎熟，盛盘中，配以蕃茄酱、生菜或椒盐佐食。
+锅烧辣后下油，随即将上述肉块用文火煎熟，盛盘中，配以番茄酱、生菜或椒盐佐食。
 
 \features
 
