--- a/latex/recipe-214.tex
+++ b/latex/recipe-214.tex
@@ -33,7 +33,7 @@
 
 \ingredient{露笋}{一听}
 \ingredient{芝麻酱}{五钱}
-\ingredient{蕃茄酱}{一两}
+\ingredient{番茄酱}{一两}
 \ingredient{芥末}{五钱}
 \ingredient{椒麻}{三钱}
 \ingredient{香油}{四钱}
@@ -51,7 +51,7 @@
 条盘内，分两堆，刀口都向外，再将笋尖放在笋头的上边；摆好后再将露笋的原汁汤由上
 面淋入盘内，走菜时，配下面四样碟子上席。
 
-\step 蕃茄酱五钱、汤一两、香油一钱、盐一分配为一个碟子。椒麻三钱、酱油五钱、
+\step 番茄酱五钱、汤一两、香油一钱、盐一分配为一个碟子。椒麻三钱、酱油五钱、
 汤一两、香油一钱、盐一分配成一个碟子。
 
 \step 椒麻三钱、酱油五钱、汤一两、香油一钱、盐一分配成一个碟子。
