--- a/latex/recipe-220.tex
+++ b/latex/recipe-220.tex
@@ -31,7 +31,7 @@
 
 \ingredients
 
-\ingredient{大红蕃茄}{二个}
+\ingredient{大红番茄}{二个}
 \ingredient{鸡蛋}{四个}
 \ingredient{大丝瓜}{一根}
 \ingredient{鸡脯肉}{三两}
@@ -45,11 +45,11 @@
 
 \preparation
 
-\step 红蕃茄在沸水中烫过，去皮、去籽，用刀片开。丝瓜将皮用刀车下；均泹熟漂冷
+\step 红番茄在沸水中烫过，去皮、去籽，用刀片开。丝瓜将皮用刀车下；均泹熟漂冷
 透。鸡蛋两个摊成蛋皮。鸡脯构、生板油分别砸茸，加清水、豆粉、盐搅成“鸡糁”。调蛋
 清豆粉。
 
-\step 捞出漂起的蕃茄片、丝瓜皮，沾干水份，连同蛋皮各抹上一层蛋清豆粉，再将“鸡
+\step 捞出漂起的番茄片、丝瓜皮，沾干水份，连同蛋皮各抹上一层蛋清豆粉，再将“鸡
 糁”舀上，片从两头相对裹拢成如意形，中间用蛋清豆粉粘稳，入盘上笼蒸五分钟，取出
 晾冷，各切四分厚片块，再用蒸碗依次订好，上笼馏热。
 
