Fix note for FANQIE

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -139,7 +139,7 @@
 
 四八、菠饺白肺。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
-五〇、七九、八五……全书各篇，“蕃茄”。据《现代汉语词典》，今作“番茄”。
+五〇、七九、八五……全书各篇，“番茄”。各本皆作“蕃茄”。径改。
 
 五二、六三、一四九、二五四，“劖”。《八》本作
 “{\bfseries\raise.19em\hbox{\scalebox{.675}[.75]{免}}\kern-.675em%
