Add note for recipe 267, HU

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -258,7 +258,8 @@
 二六四、酿两样。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
 本作“{\bfseries\scalebox{.65}[1]{林}\kern-.12em\scalebox{.55}[1]{千}}”。径改。
 
-二六七、炸扳指。“扳指”，《四》本《八》本《重》本作“斑指”。径改。
+二六七、炸扳指。“扳指”，《四》本《八》本《重》本作“斑指”。径改。“……以防炸糊。”
+“糊”，《四》本《八》本《重》本皆作“胡”。径改。
 
 二六七、三〇八，“汆一道”。《四》本《八》本作“川一道”。径改。
 
