--- a/latex/recipe-017.tex
+++ b/latex/recipe-017.tex
@@ -46,7 +46,7 @@
 
 \preparation
 
-\step 先将南瓜去皮，洗净，再将南瓜切盖挖心，掏尽内穰。
+\step 先将南瓜去皮，洗净，再将南瓜切盖挖心，掏尽内瓤。
 
 \step 五花肉洗净，切成二寸长、一分厚的片。把姜、葱、花椒宰细，同醪糟浮子、酱
 油、豆腐乳水、甜酱、红糖、香料面和切好的肉片拌匀，再拌入米粉子，装入南瓜内，盖
