Revise the policy of collation

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -66,8 +66,8 @@
 年七月版，省略称为《七》；《中国名菜谱第七辑四川名菜点》，省略称为《中》；《重
 庆名菜谱》，省略称为《重》。
 
-校勘基本方针。保留异体字、方言用字。对已经弃用的同音简化字和类推简化字，恢复原
-字。修正误植、错字、别字。
+校勘基本方针。修正异体字、保留方言用字。对已经弃用的同音简化字和类推简化字，恢
+复原字。修正误植、错字、别字。
 
 \vspace{1\baselineskip}%
 
@@ -86,7 +86,7 @@
 九、芙蓉肉片。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》
 本改。
 
-一七、大南瓜蒸肉。各本皆作“掏尽内穰”。据《现代汉语词典》，“穰”今作“瓤”。
+一七、大南瓜蒸肉。“瓤”，各本皆作“穰”。径改。
 
 一八、一九，“尖刀圆子”。《四》本《八》本《七》本作“尖刀元子”。《中》本作“尖刀
 丸子”。径改。
