Revise the policy of collation

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -66,7 +66,7 @@
 年七月版，省略称为《七》；《中国名菜谱第七辑四川名菜点》，省略称为《中》；《重
 庆名菜谱》，省略称为《重》。
 
-校勘基本方针。修正异体字、保留方言用字。对已经弃用的同音简化字和类推简化字，恢
+校勘基本方针。保留方言用字。修正异体字。对已经弃用的同音简化字和类推简化字，恢
 复原字。修正误植、错字、别字。
 
 \vspace{1\baselineskip}%
