Revise the vspaace

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -48,7 +48,7 @@
 }%
 \item[]%
 
-\vspace{0\baselineskip plus .5\baselineskip}%
+\vspace{0\baselineskip plus 1\baselineskip}%
 
 本书原为成都市饮食公司所编纂。成都市饮食公司成立于一九五六年，是一家专营川菜、
 成都小吃的特色餐饮企业。原书未公开出版，仅以内部资料发行于一九七二年七月。据编
