--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -166,8 +166,8 @@
 
 七三、旱蒸全鸡。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
-七四、三菌炖鸡。脚注{\footnotesize\circled{1}}中“……盛产于成都附近山崖中。”
-《四》本《八》本作“……盛产于成都近郊。”据《中》本改。“三菌”，鸡𭎂（㙡）菌。
+七四、三菌炖鸡。脚注{\footnotesize\circled{1}}中“……盛产于成都近郊。”《中》本作
+“……盛产于成都附近山崖中。”“三菌”，鸡𭎂（㙡）菌。
 
 八一、雪花鸡淖。“淖”，
 {n\`{a}o}{ㄋ\kern-.25emㄠ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em} 泥也。
