Revise note for recipe 205

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -234,7 +234,7 @@
 二〇四、二〇七，“橘红”。《四》本《八》本作“桔红”。径改。
 
 二〇五、糯米圆子。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
-心”。“潦”，疑误。
+心”。“潦”，用开水略煮。
 
 二〇七、八宝酿藕。“百合”，《四》本《八》本作“白合”。径改。
 
