Revise figure labels - recipe-020

--- a/latex/recipe-020.tex
+++ b/latex/recipe-020.tex
@@ -58,14 +58,14 @@
 \includegraphics[scale=1]{illustration-003.pdf}%
 \vspace{-.5625\baselineskip}%
 \caption{松子肉包叠法图}%
-\label{松子肉包叠法图}%
+\label{fig:wrapping}%
 {\small 1.豆油皮\hspace{1em}2.肉丝\hspace{1em}3.叠好后}%
 \end{wrapfigure}%
 胡椒，于深碗中混合好，再与猪肉丝、萝卜丝、姜、葱一并拌匀。
 
 \step 豆油皮一张修成六寸宽、八寸长，平铺案板上，而后把拌匀的猪肉丝、萝卜丝等铺
 在豆油皮上，铺成七分厚，铺上豆油皮的一半，再把另一半叠过来，接头处涂蛋清豆粉封
-口，如图\,\ref{松子肉包叠法图}\,。
+口，如图\,\ref{fig:wrapping}\,。
 
 \step 炒锅倒入菜油烧红，将叠好的豆油皮包放入炸透，炸成金黄色，滗去炸油，放盘中
 晾冷。再用刀切成一寸半长、
@@ -75,11 +75,11 @@
 \includegraphics[scale=1]{illustration-004.pdf}%
 \vspace{-.5625\baselineskip}%
 \caption{松子肉摆法}%
-\label{松子肉摆法}%
+\label{fig:presentation}%
 \end{wrapfigure}%
 三分宽、七分厚的长条，共二十四条。以六条为一组，于碗中镶成卍字形，如
-图\,\ref{松子肉摆法}\,。然后加二汤淹没肉条，上笼蒸三十分钟取出，扣于碗内，再加
-奶汤四两、盐七分即成。
+图\,\ref{fig:presentation}\,。然后加二汤淹没肉条，上笼蒸三十分钟取出，扣于碗
+内，再加奶汤四两、盐七分即成。
 
 \features
 
