Revise figure labels - recipe-056

--- a/latex/recipe-056.tex
+++ b/latex/recipe-056.tex
@@ -48,13 +48,13 @@
 \includegraphics[scale=1]{illustration-005.pdf}%
 \vspace{-.125\baselineskip}%
 \caption{刺气眼}
-\label{刺气眼}
+\label{fig:poking-holes}
 \end{wrapfigure}
 宽九寸。肉皮须平整没有凸凹者。先去净茸毛，刮洗干净。然后肉皮向下、排骨向上放于
 案板上，用直径二分粗的尖长竹签，在排骨缝中瘦肉上刺上若干气眼。刺的深度以接近肉
-皮为合适，但不要把肉皮刺破（图\,\ref{刺气眼}\,）。然后将它揩干水份，用铁质二股
-烤叉一把，由排骨之下，肥肉之上的痩肉中叉进去（图\,\ref{叉肉}\,），叉尖伸出肉方
-外约一尺左右。
+皮为合适，但不要把肉皮刺破（图\,\ref{fig:poking-holes}\,）。然后将它揩干水份，
+用铁质二股烤叉一把，由排骨之下，肥肉之上的痩肉中叉进去（图\,%
+\ref{fig:forking-meat}\,），叉尖伸出肉方外约一尺左右。
 
 \begin{wrapfigure}[13]{r}{11em}%
 \centering%
@@ -62,7 +62,7 @@
 \includegraphics[scale=1]{illustration-006.pdf}%
 \vspace{-.625\baselineskip}%
 \caption{叉肉}
-\label{叉肉}
+\label{fig:forking-meat}
 \end{wrapfigure}
 \vbadness=10000%
 
@@ -85,18 +85,18 @@
 \includegraphics[scale=1]{illustration-007.pdf}%
 \vspace{.1875\baselineskip}%
 \caption{烤酥}
-\label{烤酥}
+\label{fig:baking-meat}
 \end{wrapfigure}
 \vbadness=10000%
 立放，立放便要伸出火苗，烤酥时严忌火苗）在烤池之中。再将肉方由原叉眼中叉好，放
-于烤池上，肉皮向火，排骨向上（图\,\ref{烤酥}\,），同样手拿叉柄左右拧动。拧动的
-角度与出坯相同，但速度稍快。烤至肉方出油时，将烤池内的红杠炭捡于烤池四周（前后
-两端多放一些，去净池心的火星，以免肉方的油滴于火上，引起火苗），继续拧动着烤。
-此时肉方皮上的油很多，为了使它在肉皮上流来流去，把皮烫酥，而不掉下来，故拧动速
-度宜再快些。烤至肉皮成金黄色时，可以用刀尖试验一下是否酥泡。试法是：用手指捏着
-刀叶，只留一分长的刀尖在外，将肉方拿离烤池，用刀尖在肉皮上连锥几下，如发出酥泡
-的响声为合格。然后将香油三钱刷于酥皮之上，用净布擦净叉尖，取下酥方，酥皮向上放
-于大圆盘中。
+于烤池上，肉皮向火，排骨向上（图\,\ref{fig:baking-meat}\,），同样手拿叉柄左右
+拧动。拧动的角度与出坯相同，但速度稍快。烤至肉方出油时，将烤池内的红杠炭捡于烤
+池四周（前后两端多放一些，去净池心的火星，以免肉方的油滴于火上，引起火苗），继
+续拧动着烤。此时肉方皮上的油很多，为了使它在肉皮上流来流去，把皮烫酥，而不掉下
+来，故拧动速度宜再快些。烤至肉皮成金黄色时，可以用刀尖试验一下是否酥泡。试法
+是：用手指捏着刀叶，只留一分长的刀尖在外，将肉方拿离烤池，用刀尖在肉皮上连锥几
+下，如发出酥泡的响声为合格。然后将香油三钱刷于酥皮之上，用净布擦净叉尖，取下酥
+方，酥皮向上放于大圆盘中。
 
 \step[铲皮上席] 用刀尖在酥皮下平铲，将铲下的酥皮切成一寸半长、七分宽的条方片，
 照原样摆于肉方之上。另外，给每位顾客配汤盃一个，内盛加味特级清汤\footnotemark
